oc/dc-prd.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: null
  generation: 1
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    app: frontend
    deploymentconfig: frontend
  strategy:
    activeDeadlineSeconds: 21600
    resources:
      limits:
        cpu: "3"
        memory: 1G
      requests:
        cpu: 500m
        memory: 500M
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
      creationTimestamp: null
      labels:
        app: frontend
        deploymentconfig: frontend
    spec:
      containers:
      - env:
        - name: LSG_EXT_ENVIRONMENT
          value: prd
        image: 172.26.17.1:5000/rch-toeggeli-prd/frontend:latest
        imagePullPolicy: Always
        name: frontend
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: "3"
            memory: 1G
          requests:
            cpu: 500m
            memory: 500M
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: false
      containerNames:
      - frontend
      from:
        kind: ImageStreamTag
        name: frontend:latest
        namespace: rch-toeggeli-prd
    type: ImageChange
status:
  availableReplicas: 0
  latestVersion: 0
  observedGeneration: 0
  replicas: 0
  unavailableReplicas: 0
  updatedReplicas: 0
