oc/route.yaml
apiVersion: v1
kind: Route
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
    openshift.io/host.generated: "true"
  creationTimestamp: null
  labels:
    app: frontend
  name: frontend
spec:
  host: frontend.router.default.svc.cluster.local
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: frontend
    weight: 100
  wildcardPolicy: None
